# rrdemo

./: .gitignore  agile.md  bnf.md  ctrycode.md  dic.md  dzn.md  git.md  index.html  lang.md  langcode.md  license.txt  markdown.md  params.json  readme.md  redame.md  release_notes.txt  stds.md  tools.md  unicode.md  vim.md
c/: .gitignore  .mailmap  CMakeLists.txt  license.txt  readme.md  release_notes.txt
c/check/: readme.md
c/cmake/: compile_helpers.cmake  outrepath.cml  source_helpers.cmake  unicode.cml
c/cmake/Modules/: AppendQtdirToPrefix.cmake  FindQt5CMake.cmake  RrDemoSourcesHelpers.cmake  RrDemoSupportsHelpers.cmake  RrDemoVariablesHelpers.cmake  cstd.cml  uac.cml  uac.frgmt
c/demo/: CMakeLists.txt
c/demo/doxygen/: CMakeLists.txt
c/demo/src/: CMakeLists.txt  array.c  boolean.c  config.h.in  for.c  integer.c  main.c  pointer.c  random.c  src.h  thread-c11.c  thread-posix-mutex.c  thread-posix-simple.c  thread.c
c/demo/test/: CMakeLists.txt
c/demoexe/: CMakeLists.txt
c/demoexe/doxygen/: CMakeLists.txt
c/demoexe/src/: CMakeLists.txt
c/demoexe/test/: CMakeLists.txt
c/demolib/: CMakeLists.txt
c/demolib/doxygen/: CMakeLists.txt  Doxyfile.in
c/demolib/src/: CMakeLists.txt  coding_style.c  coding_style.h  config.h.in
c/demolib/test/: CMakeLists.txt
c/exe/: CMakeLists.txt  akari.c
c/exe/doxygen/: CMakeLists.txt
c/exe/src/: CMakeLists.txt  config.h.in  main.c  src.c
c/exe/test/: CMakeLists.txt
c/lang/: CMakeLists.txt  readme.md  threads.c
c/lang/doxygen/: CMakeLists.txt
c/lang/src/: CMakeLists.txt  config.h.in  def.h  fcn.h  flow-for.c  flow-function.c  helloworld.c  libsrcex.c  main.c  random.c  type-array.c  type-boolean.c  type-integer.c  type-numeric.c  type-pointer.c
c/lang/stdlib/: page_float.h  page_locale.h  page_time.h  test_stdio.c  test_stdlib.c
c/lang/test/: CMakeLists.txt
c/langc/: CMakeLists.txt
c/langc/doxygen/: CMakeLists.txt  mainpage.h
c/langc/src/: CMakeLists.txt  coding_style.n  config.h.in
c/langc/test/: CMakeLists.txt  test.c
c/lib/: CMakeLists.txt
c/lib/doxygen/: CMakeLists.txt
c/lib/src/: CMakeLists.txt  api.c  api.h  config.h.in  def.h
c/lib/test/: CMakeLists.txt
c/linux/: CMakeLists.txt  readme.md
c/linux/src/: CMakeLists.txt  main.c
c/logic01134/: CMakeLists.txt
c/logic01134/src/: config.h.in  main.c  src.h
c/logic01134/test/: CMakeLists.txt
c/opengl/: CMakeLists.txt  readme.md
c/opengl/src/: CMakeLists.txt  main.c
c/spls/: CMakeLists.txt
c/tpcheck/: readme.md
cdom/: .gitignore  CMakeLists.txt  readme.md
cdom/cmake/Modules/: FindLIVE555.cmake  FindQt5CMake.cmake  FindSGLIB.cmake  RrDemoSourcesHelpers.cmake  SourcesUtilities.cmake  SupportsUtilities.cmake  VariablesUtilities.cmake
cdom/lang-c/: CMakeLists.txt
cdom/lang-c/src/: CMakeLists.txt  alternative_spellings.c  array-sglib.c  array.c  array.h  boolean.c  boolean.h  character.c  character.h  coroutine.c  def.h  digraph.c  double_linked_list.c  duff_device.c  enumeration.c  file_stream.c  flow-functions.h  function.c  function.h  input_output.h  integer.c  iso646.h  iso646alt.h  iteration.h  linked_list.c  list-sglib.c  localization.c  localization.h  loop.c  main.c  memery.c  numeric.c  optimizations-duff_device.c  parse_bit_stream.c  random.c  sorted_linked_list.c  std_stream.c  stdstream.c  stringalt.h  struct.c  (+9 more)
cdom/lang-cpp/: CMakeLists.txt
cdom/lang-cpp/src/: CMakeLists.txt  ClassImplicitlyDeclared.cpp  ClassMember.cpp  ClassMember.hpp  ClassMemberShorthands.inl  array.cpp  boolean.cpp  boolean.hpp  class-friend.cpp  class.cpp  class.hpp  def.hpp  lambda.cpp  main.cpp  namespace.hpp  singleton.cpp  singleton.hpp  thread.cpp  union.cpp
cdom/lang-lua/: CMakeLists.txt
cdom/lang-lua/src/: CMakeLists.txt
cdom/prj-clib/: CMakeLists.txt
cdom/prj-clib/doxygen/: CMakeLists.txt  Doxyfile.in
cdom/prj-clib/src/: CMakeLists.txt  api.c  api.h  config.h.in  def.h  parse_bit_stream.c  parse_bit_stream.h
cdom/prj-clib/test/: CMakeLists.txt
cdom/prj-cppexe/: CMakeLists.txt
cdom/prj-cppexe/doxygen/: CMakeLists.txt
cdom/prj-cppexe/src/: CMakeLists.txt  config.hpp.in  main.cpp
cdom/prj-cppexe/test/: CMakeLists.txt
cdom/prj-cpplib/: CMakeLists.txt
cdom/prj-cpplib/doxygen/: CMakeLists.txt  Doxyfile.in  mainpage.hpp
cdom/prj-cpplib/src/: CMakeLists.txt  api.hpp  config.hpp.in  lang-constexpr-cpb.hpp
cdom/prj-cpplib/test/: CMakeLists.txt
cdom/spls/: CMakeLists.txt
cdom/xtr-boost/: CMakeLists.txt
cdom/xtr-boost/src/: CMakeLists.txt
cdom/xtr-directx/: CMakeLists.txt
cdom/xtr-directx/src/: CMakeLists.txt
cdom/xtr-jrtplib/src/: RTP.h
cdom/xtr-linux/: CMakeLists.txt
cdom/xtr-linux/src/: CMakeLists.txt  threads-posix-cond.c  threads-posix-mutex.c  threads-posix-simple.c
cdom/xtr-live555/: CMakeLists.txt
cdom/xtr-live555/src/: ADTSAudioUDPSMS.cpp  ADTSAudioUDPServerMediaSubsession.cpp  ADTSAudioUDPServerMediaSubsession.hpp  ADTSAudioUDPSource.cpp  ADTSAudioUDPSource.hpp  ADTSAudioUDPSourceHelper.cpp  ADTSAudioUDPSourceHelper.hpp  BasicUDPSource.cpp  BasicUDPSource.hpp  BasicUDPSourceBuf.inl  CMakeLists.txt  (+54 more)
cdom/xtr-opengl/: CMakeLists.txt
cdom/xtr-qt/: CMakeLists.txt
cdom/xtr-windows/: CMakeLists.txt
cfamily/: CMakeLists.txt  readme.md
cfamily/lang-c/: CMakeLists.txt
cfamily/lang-cpp/: CMakeLists.txt
cfamily/prj-exe/: CMakeLists.txt
cfamily/prj-lib/: CMakeLists.txt
cfamily/tpty-directx/: CMakeLists.txt
cfamily/tpty-linux/: CMakeLists.txt
cfamily/tpty-windows/: CMakeLists.txt
cfamily/trdpty-live555/: CMakeLists.txt
cfamily/trdpty-opengl/: CMakeLists.txt
cfamily/trdpty-qt/: CMakeLists.txt
cpp/: .gitignore  CMakeLists.txt  readme.md  release_notes.txt
cpp/cmake/: append_qtdir_to_prefixes.cmake  cpp_highest_warning_level.cmake  cppstd.cml
cpp/directx/: CMakeLists.txt  readme.md
cpp/exe/: CMakeLists.txt
cpp/hentaikit/: CMakeLists.txt
cpp/lackofb/: CMakeLists.txt
cpp/lang/: CMakeLists.txt
cpp/lib/: CMakeLists.txt
cpp/live555/: CMakeLists.txt
cpp/qt/: CMakeLists.txt  readme.md
cpp/spls/: CMakeLists.txt
cpp/windows/: CMakeLists.txt  readme.md
(+587 files in other folders)
