# RrDemo › Cdom
# zhengrr
# 2016-6-28 – 12-9
# The MIT License
cmake_minimum_required(VERSION 3.0)
project("RrDemo-Cdom" VERSION 0.0.0.0)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
include("SourcesUtilities")
include("SupportsUtilities")
include("VariablesUtilities")

make_product_variables()

enable_highest_warning_level_support()

add_subdirectory("deps")
option(${PRODUCT_NAME_UPPER}-CLIB "Project C Lib." OFF)
if(${PRODUCT_NAME_UPPER}-CLIB)
  add_subdirectory("prj-clib")
endif()
option(${PRODUCT_NAME_UPPER}-CPPEXE "Project CPP Exe." OFF)
if(${PRODUCT_NAME_UPPER}-CPPEXE)
  add_subdirectory("prj-cppexe")
endif()
add_subdirectory("spls")

option(${PRODUCT_NAME_UPPER}-C "Project C." OFF)
if(${PRODUCT_NAME_UPPER}-C)
  add_subdirectory("lang-c")
endif()
option(${PRODUCT_NAME_UPPER}-CPP "Project CPP." OFF)
if(${PRODUCT_NAME_UPPER}-CPP)
  add_subdirectory("lang-cpp")
endif()
option(${PRODUCT_NAME_UPPER}-GO "Project Go." OFF)
if(${PRODUCT_NAME_UPPER}-GO)
  add_subdirectory("lang-go")
endif()
option(${PRODUCT_NAME_UPPER}-LUA "Project Lua." OFF)
if(${PRODUCT_NAME_UPPER}-LUA)
  add_subdirectory("lang-lua" ON)
endif()
option(${PRODUCT_NAME_UPPER}-RUST "Project Rust." OFF)
if(${PRODUCT_NAME_UPPER}-RUST)
  add_subdirectory("lang-rust")
endif()

option(${PRODUCT_NAME_UPPER}-BOOST "Project Boost." OFF)
if(${PRODUCT_NAME_UPPER}-BOOST)
  add_subdirectory("xtr-boost")
endif()
option(${PRODUCT_NAME_UPPER}-DIRECTX "Project DirectX." OFF)
if(${PRODUCT_NAME_UPPER}-DIRECTX)
  add_subdirectory("xtr-directx")
endif()
option(${PRODUCT_NAME_UPPER}-LINUX "Project Linux." OFF)
if(${PRODUCT_NAME_UPPER}-LINUX)
  add_subdirectory("xtr-linux")
endif()
option(${PRODUCT_NAME_UPPER}-LIVE555 "Project LIVE555." OFF)
if(${PRODUCT_NAME_UPPER}-LIVE555)
  add_subdirectory("xtr-live555")
endif()
option(${PRODUCT_NAME_UPPER}-OPENGL "Project OpenGL." OFF)
if(${PRODUCT_NAME_UPPER}-OPENGL)
  add_subdirectory("xtr-opengl")
endif()
option(${PRODUCT_NAME_UPPER}-QT "Project Qt." OFF)
if(${PRODUCT_NAME_UPPER}-QT)
  add_subdirectory("xtr-qt")
endif()
option(${PRODUCT_NAME_UPPER}-WINDOWS "Project Windows." OFF)
if(${PRODUCT_NAME_UPPER}-WINDOWS)
  add_subdirectory("xtr-windows")
endif()

install(DIRECTORY "docs" DESTINATION ".")
install(DIRECTORY "spls" DESTINATION ".")
install(FILES "license.txt" DESTINATION ".")
install(FILES "release_notes.txt" DESTINATION ".")
